adds require dev

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "ambrosemwaka@gmail.com"
         }
     ],
-    "minimum-stability": "dev-master",
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {"Logdo\\": "src/"}
     },
